[gd_scene load_steps=3 format=3 uid="uid://igsxm17lpmpk"]

[ext_resource type="Script" uid="uid://cqh6e65tcai6c" path="res://script/kantor_scene.gd" id="1_6c7bi"]
[ext_resource type="PackedScene" uid="uid://bao1ug3shuin" path="res://scene/level_template.tscn" id="2_j7eit"]

[node name="kantor_scene" type="Node2D"]
script = ExtResource("1_6c7bi")

[node name="background_kantor" type="Sprite2D" parent="."]

[node name="character_node" type="Node2D" parent="."]
position = Vector2(960, 0)

[node name="level_template" parent="." instance=ExtResource("2_j7eit")]
visible = false

[node name="character_node_left" type="Node2D" parent="."]
position = Vector2(384, 0)

[node name="character_node_right" type="Node2D" parent="."]
position = Vector2(1536, 0)

[node name="leaderboard_lose" type="Sprite2D" parent="."]

[node name="leaderboard_win" type="Sprite2D" parent="."]

[connection signal="done_working" from="level_template" to="." method="_on_level_template_done_working"]
